Fix width to stop page overflow
Fixing width will prevent the page from overflowing into white space when the browser has shrunk.

--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@ ul a {
 
 .header-bottom {
     display: flex;
-    align-items: center;
+    max-width: 700px;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 10px 100px 50px;
 }
 
@@ -98,18 +99,16 @@ button a {
 
 .gallery .images {
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: center;
     padding: 10px 50px;
     gap: 30px;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20px;
+    padding: 10px;
     width: 150px;
+    text-align: center;
 }
 
 .content img{
